Redesigned login page. Now it looks beautiful :)

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -2,6 +2,7 @@
 
 #yggdrasil {
   margin-left: 14rem;
+  width: calc(100% - 14rem);
 }
 
 #side-navbar {
@@ -51,6 +52,37 @@
 .side-navbar-link:hover {
   color: red;
   text-decoration: none;
+}
+
+#login-box {
+  position: absolute;
+  top: 35%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
+#login-box #logo {
+  width: 300px;
+  margin: 10% 0;
+}
+
+#login-box #toolbar {
+  margin-top: 2em;
+}
+
+#login-box #submit {
+  width: 100%;
+  background-color: white;
+  color: #3490dc;
+}
+
+#login-box #submit:hover {
+  background-color: #3490dc;
+  color: white;
+}
+
+#login-box #remember-me {
+  text-align: right;
 }
 
 /*!
