--- a/resources/sass/_sitewide.scss
+++ b/resources/sass/_sitewide.scss
@@ -1,6 +1,22 @@
 
-// The origin of everything
+// The origin of the world should be very firm!
 #yggdrasil{
+  position: absolute;
+  padding: 0px;
 }
 
+#page-header {
+  margin: 8px;
+  padding: 8px;
+  background: #bdffe7;
+  color: #0c7900;
+  height: 4rem;
+}
 
+#page-content-wrapper {
+  margin: 8px;
+  padding: 8px;
+  background: #efefef;
+  height: calc(100vh - 32px - 4rem);
+  overflow-y: scroll;
+}
