--- a/resources/sass/_sitewide.scss
+++ b/resources/sass/_sitewide.scss
@@ -20,3 +20,11 @@
   height: calc(100vh - 32px - 4rem);
   overflow-y: scroll;
 }
+
+#messages-and-errors {
+  position: absolute;
+  right: 2vw;
+  top: 3vh;
+  z-index: 1;
+}
+
