--- a/resources/sass/auth/login-form.scss
+++ b/resources/sass/auth/login-form.scss
@@ -31,11 +31,11 @@
   text-align: right;
 }
 
-#site-description {
+.loginpage-wrapper {
   margin: 1em;
   padding: 1em;
   border: 5px #009fe0 dotted;
-  overflow-y: scroll;
   height: calc(100vh - 4em);
+  overflow-y: scroll;
 }
 
