Changed password reset form and register form into modals

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -96,13 +96,14 @@
 
 #login-box #toolbar {
   margin-top: 2em;
+  display: flex;
+  justify-content: space-between;
 }
 
 #login-box button {
-  width: 50%;
   background-color: white;
   color: #3490dc;
-  display: inline;
+  width: 27%;
 }
 
 #login-box button:hover {
@@ -112,6 +113,7 @@
 
 #login-box #misc {
   text-align: right;
+  display: inline-block;
 }
 
 .loginpage-wrapper {
