--- a/resources/sass/shared/side-navbar.scss
+++ b/resources/sass/shared/side-navbar.scss
@@ -18,18 +18,17 @@
   text-align: center;
 }
 
-#side-navbar-menu {
+.side-navbar-menu { // Including both the main menu and submenus
   list-style-type: none; // Remove the bullets
   padding: 0; // Remove the auto padding
 }
 
 .side-navbar-item {
   background: #313131;
-  margin: 8px;
   padding: 4%;
 }
 
-#side-navbar .dropdown-menu {
+#side-navbar #collapse {
   background-clip: content-box;
   background: transparent;
   border: none;
@@ -37,12 +36,12 @@
   width: 100%;
 }
 
-#side-navbar .dropdown-menu .side-navbar-item {
+#side-navbar .side-navbar-submenu {
   margin-left: 12%; // Indent subitems
 }
 
 .side-navbar-link {
-  margin: 6px 0;
+  margin: 0 6px 8px;
   display: block; // Let the link fill the whole div
   color: white;
 }
