various security improvements; implemented superadmins (not completed)

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -123,6 +123,14 @@
   overflow-y: scroll;
 }
 
+.role-2 {
+  color: red;
+}
+
+.role-1 {
+  color: orange;
+}
+
 /*!
  * Bootstrap v4.4.1 (https://getbootstrap.com/)
  * Copyright 2011-2019 The Bootstrap Authors
