--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -11,7 +11,9 @@
 // The login form
 @import 'auth/login-form.scss';
 
+// User index
+@import 'users/index.scss';
+
 // Bootstrap
 @import '~bootstrap/scss/bootstrap';
 
-$test:#fff;
